@@ -4,25 +4,26 @@
   <artifactId>automation</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
-        <!-- Source directory configuration -->
-        <sourceDirectory>src</sourceDirectory>
-        <plugins>
-            <!-- Following plugin executes the testng tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.14.1</version>
-                <configuration>
-                    <!-- Suite testng xml file to consider for test execution -->
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                </configuration>
-            </plugin>
-            <!-- Compiler plugin configures the java version to be usedfor compiling 
-                the code -->
-        </plugins>
-    </build>
+  	<plugins>
+  		<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<argLine> -Xms1024m -Xmx2048m -XX:MaxPermSize=256m
+						-Dfile.encoding=UTF-8
+					</argLine>
+					<suiteXmlFiles>
+						<suiteXmlFile>${suite}.xml</suiteXmlFile>
+					</suiteXmlFiles>
+					<!-- <workingDirectory>target</workingDirectory> -->
+				</configuration>
+			</plugin>
+  
+  	</plugins>
+  	
+        
+  </build>
  
  
  
